--- a/package.json
+++ b/package.json
@@ -10,5 +10,9 @@
   "license": "ISC",
   "devDependencies": {
     "babel-preset-es2015": "^6.18.0"
+  },
+  "dependencies": {
+    "body-parser": "^1.15.2",
+    "express": "^4.14.0"
   }
 }
